log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-data
          emptyDir: {}

        - name: app-config
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt

      containers:
        - name: log-output-writer
          image: log-output
          imagePullPolicy: IfNotPresent
          command:
            - python
            - writer.py
          volumeMounts:
            - name: log-data
              mountPath: /usr/src/app/files

        - name: log-output-reader
          image: log-output
          imagePullPolicy: IfNotPresent
          command:
            - python
            - app.py
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - name: log-data
              mountPath: /usr/src/app/files

            - name: app-config
              mountPath: /usr/src/app/config
              readOnly: true
