log-output/manifests/greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - name: greeter
        image: greeter-v1
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 5m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - name: greeter
        image: greeter-v2
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 5m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
  labels:
    istio.io/use-waypoint: greeter-waypoint
spec:
  selector:
    app: greeter
  ports:
  - name: http
    port: 8000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
  namespace: exercises
spec:
  selector:
    app: greeter
    version: v1
  ports:
  - name: http
    port: 8000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
  namespace: exercises
spec:
  selector:
    app: greeter
    version: v2
  ports:
  - name: http
    port: 8000
    targetPort: http
